# yaoj

./: .gitignore  .gitlab-ci.yml  Cargo.toml  HONOR-CODE.md  README.md
migrations/2022-09-03-071930_create_jobs/: down.sql  up.sql
migrations/2022-09-03-074054_create_users/: up.sql
migrations/2022-09-03-074733_create_contests/: down.sql  up.sql
src/: api.rs  authorization.rs  config.rs  judge.rs  main.rs  persistent.rs
src/api/: contests.rs  err.rs  jobs.rs  users.rs
src/persistent/: models.rs  schema.rs
src/persistent/models/: contests.rs  jobs.rs  users.rs
