[package]
name = "oj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
amiquip = "0.4.2"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.18", features = ["derive"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
env_logger = "0.9.0"
http = "0.2.8"
log = "0.4.17"
r2d2 = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
temp-dir = "0.1.11"
wait-timeout = "0.2.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
